unpackaged/main/default/objects/Opportunity/fields/Main_Growth_Levers__c.field-meta.xml
<CustomField>
    <fullName>Main_Growth_Levers__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Main growth levers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Main_Growth_Levers</valueSetName>
    </valueSet>
</CustomField>