unpackaged/main/default/objects/Opportunity/fields/Minimum_Production__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Production__c</fullName>
    <label>Minimum Production</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>