unpackaged/main/default/objects/Opportunity/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Next Steps</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>