unpackaged/main/default/objects/Opportunity/fields/Number_of_Advisors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Advisors__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Number of Advisors</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>