unpackaged/main/default/objects/Opportunity/fields/Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participants__c</fullName>
    <description>Used on Retirement Plan Opportunities</description>
    <label>Number of Participants</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>