unpackaged/main/default/objects/Opportunity/fields/Number_of_RIA_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_RIA_Accounts__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Number of RIA Accounts</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>