unpackaged/main/default/objects/Opportunity/fields/Office_Team_Structure__c.field-meta.xml
<CustomField>
    <fullName>Office_Team_Structure__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Office/Team Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>