unpackaged/main/default/objects/Opportunity/fields/Other_Plan_Provider__c.field-meta.xml
<CustomField>
    <fullName>Other_Plan_Provider__c</fullName>
    <inlineHelpText>Populate details if &#39;Other&#39; was selected in the Plan Provider field above</inlineHelpText>
    <label>Other Plan Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>