unpackaged/main/default/objects/Opportunity/fields/Other_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Other_Source_Detail__c</fullName>
    <label>Other Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>