unpackaged/main/default/objects/Opportunity/fields/Other_Tech__c.field-meta.xml
<CustomField>
    <fullName>Other_Tech__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Other Tech</label>
    <length>255</length>
    <type>Text</type>
</CustomField>