unpackaged/main/default/objects/Opportunity/fields/Outside_Money_Managers_Details__c.field-meta.xml
<CustomField>
    <fullName>Outside_Money_Managers_Details__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <inlineHelpText>Please list any outside money managers needed on platform</inlineHelpText>
    <label>Outside Money Managers Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>