unpackaged/main/default/objects/Opportunity/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Pain Points</label>
    <length>255</length>
    <type>Text</type>
</CustomField>