unpackaged/main/default/objects/Opportunity/fields/Participant_Balance__c.field-meta.xml
<CustomField>
    <fullName>Participant_Balance__c</fullName>
    <description>Used for Retirement Plans</description>
    <label>Participant Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>