unpackaged/main/default/objects/Opportunity/fields/Phone_and_Interoffice_Communication__c.field-meta.xml
<CustomField>
    <fullName>Phone_and_Interoffice_Communication__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Phone and Inter-office Communication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>