unpackaged/main/default/objects/Opportunity/fields/Plan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Plan_Balance__c</fullName>
    <description>Used for Retirement Plans</description>
    <label>Plan Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>