unpackaged/main/default/objects/Opportunity/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <description>Used for Retirement Plans</description>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401(k)</fullName>
            </value>
            <value>
                <fullName>Solo 401(k)</fullName>
            </value>
            <value>
                <fullName>401(a)</fullName>
            </value>
            <value>
                <fullName>403(b)</fullName>
            </value>
            <value>
                <fullName>457</fullName>
            </value>
            <value>
                <fullName>Cash Balance</fullName>
            </value>
            <value>
                <fullName>Defined Benefit</fullName>
            </value>
            <value>
                <fullName>Employee Stock Ownership Plan (ESOP)</fullName>
            </value>
            <value>
                <fullName>Money Purchase</fullName>
            </value>
            <value>
                <fullName>Profit-Sharing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>