unpackaged/main/default/objects/Opportunity/fields/Platform_Fee__c.field-meta.xml
<CustomField>
    <fullName>Platform_Fee__c</fullName>
    <label>Platform Fee</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>