unpackaged/main/default/objects/Opportunity/fields/Platform_Fee_bps__c.field-meta.xml
<CustomField>
    <fullName>Platform_Fee_bps__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Platform Fee (bps)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>