unpackaged/main/default/objects/Opportunity/fields/Platform_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Platform_Fee_Percent__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Platform Fee (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>