unpackaged/main/default/objects/Opportunity/fields/Portfolio_Management__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Management__c</fullName>
    <description>Updated from Picklist to Text by CCC(KM) for DAN-117</description>
    <label>Portfolio Management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>