unpackaged/main/default/objects/Opportunity/fields/Potential_Service__c.field-meta.xml
<CustomField>
    <fullName>Potential_Service__c</fullName>
    <label>Potential Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RIA 1099</fullName>
            </value>
            <value>
                <fullName>RIA W2</fullName>
            </value>
            <value>
                <fullName>RIA 1099 + BD</fullName>
            </value>
            <value>
                <fullName>RIA W2 + BD</fullName>
            </value>
            <value>
                <fullName>Fee Based Wealth Management</fullName>
            </value>
            <value>
                <fullName>Broker Dealer</fullName>
            </value>
            <value>
                <fullName>Delaware Statutory Trust (DST)</fullName>
            </value>
            <value>
                <fullName>Financial Planning</fullName>
            </value>
            <value>
                <fullName>Retirement Planning or ERISA</fullName>
            </value>
            <value>
                <fullName>Family Office Service Agreement</fullName>
            </value>
            <value>
                <fullName>Tax Services</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>