unpackaged/main/default/objects/Opportunity/fields/Production_Amount__c.field-meta.xml
<CustomField>
    <fullName>Production_Amount__c</fullName>
    <label>Production Amount</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>