unpackaged/main/default/objects/Opportunity/fields/Promissory_Note_Status__c.field-meta.xml
<CustomField>
    <fullName>Promissory_Note_Status__c</fullName>
    <description>Created by CCC (KM) for DAN-117</description>
    <label>Promissory Note Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>