unpackaged/main/default/objects/Opportunity/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401k</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Diversify Advisor Referral</fullName>
            </value>
            <value>
                <fullName>Home Office Referral</fullName>
            </value>
            <value>
                <fullName>Personal Relationship</fullName>
            </value>
            <value>
                <fullName>Website Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>