unpackaged/main/default/objects/Opportunity/fields/Required_to_Make_a_Move__c.field-meta.xml
<CustomField>
    <fullName>Required_to_Make_a_Move__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>What is required to make a move?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>