unpackaged/main/default/objects/Opportunity/fields/Revenue_T12__c.field-meta.xml
<CustomField>
    <fullName>Revenue_T12__c</fullName>
    <label>T12 Total Revenue</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>