unpackaged/main/default/objects/Opportunity/fields/RIA_Agreement__c.field-meta.xml
<CustomField>
    <fullName>RIA_Agreement__c</fullName>
    <description>Update by CCC(KM) for opportunity updates during the FSC to custom migration.
Old help text: Select if fully executed document has been attached to the opportunity record</description>
    <label>RIA Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>