unpackaged/main/default/objects/Opportunity/fields/Schwab_Count__c.field-meta.xml
<CustomField>
    <fullName>Schwab_Count__c</fullName>
    <label>Schwab Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>