unpackaged/main/default/objects/Opportunity/fields/Source_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funds__c</fullName>
    <label>Source of Funds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Gift/Inheritance</fullName>
            </value>
            <value>
                <fullName>Savings (12+ Months)</fullName>
            </value>
            <value>
                <fullName>Advisory Account</fullName>
            </value>
            <value>
                <fullName>Employer Sponsored Plan</fullName>
            </value>
            <value>
                <fullName>Sale of a Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Sale of an Annuity (Including 1035)</fullName>
            </value>
            <value>
                <fullName>Sale of Property (Including 1031)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>