unpackaged/main/default/objects/Opportunity/fields/T12_Planning__c.field-meta.xml
<CustomField>
    <fullName>T12_Planning__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>T12 Planning</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>