unpackaged/main/default/objects/Opportunity/fields/Target_Transition_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Target_Transition_Insurance__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Target % to Transition: Insurance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>