unpackaged/main/default/objects/Opportunity/fields/Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack__c</fullName>
    <description>Created by CCC(KM) for lead updates during the FSC to custom migration.</description>
    <label>Tech Stack</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tech_Stack</valueSetName>
    </valueSet>
</CustomField>