unpackaged/main/default/objects/Opportunity/fields/Term_Sheet_Provided__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet_Provided__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <inlineHelpText>Select if fully executed document has been attached to the opportunity record</inlineHelpText>
    <label>Signed Term Sheet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>