unpackaged/main/default/objects/Opportunity/fields/Total_AUA__c.field-meta.xml
<CustomField>
    <fullName>Total_AUA__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <label>Total AUA</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>