unpackaged/main/default/objects/Opportunity/fields/Unique_Strategies_Details__c.field-meta.xml
<CustomField>
    <fullName>Unique_Strategies_Details__c</fullName>
    <description>Created by CCC(KM) for opportunity updates during the FSC to custom migration.</description>
    <inlineHelpText>Please list any unique strategies implemented</inlineHelpText>
    <label>Unique Strategies Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>