unpackaged/main/default/objects/Opportunity/recordTypes/Branch.recordType-meta.xml
<RecordType>
    <fullName>Branch</fullName>
    <active>true</active>
    <businessProcess>Branch Opportunity</businessProcess>
    <label>Branch</label>
</RecordType>