unpackaged/main/default/objects/Opportunity/recordTypes/Existing_Client_Wallet_Share.recordType-meta.xml
<RecordType>
    <fullName>Existing_Client_Wallet_Share</fullName>
    <active>true</active>
    <businessProcess>Existing Client Process</businessProcess>
    <label>Existing Client</label>
</RecordType>