unpackaged/main/default/objects/Opportunity/recordTypes/Independent.recordType-meta.xml
<RecordType>
    <fullName>Independent</fullName>
    <active>true</active>
    <businessProcess>Partner</businessProcess>
    <label>Independent</label>
</RecordType>