unpackaged/main/default/objects/Opportunity/recordTypes/New_Client_s.recordType-meta.xml
<RecordType>
    <fullName>New_Client_s</fullName>
    <active>true</active>
    <businessProcess>New Client Process</businessProcess>
    <label>New Client</label>
</RecordType>