unpackaged/main/default/objects/Opportunity/recordTypes/New_Money.recordType-meta.xml
<RecordType>
    <fullName>New_Money</fullName>
    <active>true</active>
    <businessProcess>FinServ__Opportunity Process</businessProcess>
    <label>New Money</label>
</RecordType>