unpackaged/main/default/objects/Opportunity/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>true</active>
    <businessProcess>Partner</businessProcess>
    <label>Partner</label>
</RecordType>