unpackaged/main/default/objects/Opportunity/recordTypes/Retirement_Plan.recordType-meta.xml
<RecordType>
    <fullName>Retirement_Plan</fullName>
    <active>true</active>
    <businessProcess>Retirement Plan Process</businessProcess>
    <label>Retirement Plan</label>
</RecordType>