unpackaged/main/default/objects/Opportunity/validationRules/Closed_Lost_Requires_Loss_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Requires_Loss_Reason</fullName>
    <active>true</active>
    <description>Closed Lost Opportunity requires a Loss Reason</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, &quot;Closed Lost&quot;),
        ISPICKVAL(StageName, &quot;Advisor Lost&quot;)
    ),
    ISBLANK(TEXT(Loss_Reason__c))
)</errorConditionFormula>
    <errorMessage>Closed Lost Opportunity requires a Loss Reason</errorMessage>
</ValidationRule>