unpackaged/main/default/objects/Opportunity/listViews/Alex_Long_Opportunities.listView-meta.xml
<ListView>
    <fullName>Alex_Long_Opportunities</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Financial_Advisor_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Alex Long</value>
    </filters>
    <filters>
        <field>Financial_Advisor_Team__c</field>
        <operation>contains</operation>
        <value>Alex Long</value>
    </filters>
    <label>Alex Long - Opportunities</label>
    <sharedTo>
        <group>Alex_Long_12</group>
    </sharedTo>
</ListView>