unpackaged/main/default/objects/Opportunity/listViews/Branch.listView-meta.xml
<ListView>
    <fullName>Branch</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Branch,Opportunity.Partner,Opportunity.Independent</value>
    </filters>
    <label>Branch</label>
    <sharedTo>
        <group>Home_Office</group>
    </sharedTo>
</ListView>